hammer time fix attempt on ios device

--- a/src/sass/common/aside.scss
+++ b/src/sass/common/aside.scss
@@ -91,7 +91,7 @@
     overflow-x: hidden;
     width: 100%;
     
-    touch-action: pan-y;
+    // touch-action: pan-y;
   }
 
   &.no-toolbar {
